# MLNAjb

./: .gitignore  .python-version  LICENSE  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  community_detection.html  install_spacy_model.py  network_visualization.html  post_install.py  pyproject.toml  requirements.txt  setup.py  test_community.html  test_network.html
.github/workflows/: mlna_ci.yml
app/: app.py  network_visualization.html
docs/: README.md  _config.yml  index.md
material4tutorial/: mlna_playground.ipynb
material4tutorial/iran_telegraph_data/: 1277_تاریخ منتظم ناصری.txt  1283_نامه ساعد الملک درباره خطوط تلگرافی ایران.txt  1303_پروگرام مشی کابینه آقای سردار سپه.txt  1314_ساعت ظهر در ولایات.txt  IOR_L_PWD_7_403_E_4_1.txt  IOR_L_PWD_7_452_E_7_16.txt  IOR_L_PWD_7_480_E_9_1.txt  history_of_the_atlantic_cable.txt  iranica_indo_european_telegraph_department.txt
material4tutorial/iran_telegraph_data/app_data/: telegraph_data.xlsx  telegraph_user_dict.pickle
material_4_tutorial/: mlna_playground.ipynb
material_4_tutorial/.ipynb_checkpoints/: mlna_playground-checkpoint.ipynb
material_4_tutorial/iran_telegraph_data/: 1278_گزارش وزیر امور خارجه درباره قرارداد تلگراف.txt  1283_گزارش وزیر امور خارجه درباره گسترش تلگراف.txt  IOR_L_PWD_7_410_E_4_2.txt  IOR_L_PWD_7_410_E_4_3.txt  iranica_first_telegraph_lines_in_persia.txt  iranica_indo_european_telegraph_company.txt  تلگراف در ایران.txt  تلگراف_نخستین دستگاه مخابراتی در ایران.txt
material_4_tutorial/iran_telegraph_data/app_data/: telegraph_data.pickle  telegraph_data.xlsx  telegraph_metadata.xlsx  telegraph_user_dict.pickle  ~$telegraph_data.xlsx
mlna/: network.py  preproc.py  user_input.py
test_data/: filtered_df_and.pickle  filtered_df_or.pickle  network_df  test_df.pickle  test_dict.pickle  updated_weights.pickle
tests/: test_network.py  test_preproc.py  test_user_input.py
