[tool.poetry]
name = "mlna"
version = "0.1.0"
description = "the MultiLingual Network Analysis package"
authors = ["Golnaz Sarkar Farshi <golnaz.s.farshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
community = "^1.0.0b1"
googletrans = "^4.0.0-rc1"
langdetect = "^1.0.9"
networkx = "^3.3"
pandas = "^2.2.2"
python-louvain = "^0.16"
pyvis = "^0.3.2"
rapidfuzz = "^3.9.3"
regex = "^2024.4.28"
setuptools = "^70.3.0"
spacy = "^3.7.2"
streamlit == "^1.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
post_install_spacy_model = "install_spacy_model:download_model"
