[tool.poetry]
name = "mlna"
version = "0.1.0"
description = "the MultiLingual Network Analysis package"
authors = ["Golnaz Sarkar Farshi <golnaz.s.farshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
community = "^1.0.0b1"
googletrans = "^4.0.0-rc1"
langdetect = "^1.0.9"
numpy = "<2.0"
networkx = "^3.3"
pandas = "*"
python-louvain = "^0.16"
pyvis = "^0.3.2"
rapidfuzz = "^3.9.3"
regex = "^2024.4.28"
setuptools = "^70.3.0"
spacy = "^3.7.2"
spacy-en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz"}
openpyxl = "^3.1.5"
thinc = "^8.2.5"
cython = "^0.29.32"
pytest= "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
